--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9c30f181-68fa-47e0-895e-9c9a7b593391"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
